Fixed config loading order