@@ -50,13 +50,13 @@ public class ClassUtils {
      * @param classLoader The ClassLoader to use.
      * @param <T>         The type of the new instance.
      * @return The new instance.
-     * @throws Exception Thrown when the instantiation failed.
+     * @throws FlywayException Thrown when the instantiation failed.
      */
     @SuppressWarnings({"unchecked"})
     // Must be synchronized for the Maven Parallel Junit runner to work
     public static synchronized <T> T instantiate(String className, ClassLoader classLoader) {
         try {
-            return (T) Class.forName(className, true, classLoader).newInstance();
+            return (T) Class.forName(className, true, classLoader).getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new FlywayException("Unable to instantiate class " + className + " : " + e.getMessage(), e);
         }
